--- a/frontend/src/Components/CartItems/cartItems.css
+++ b/frontend/src/Components/CartItems/cartItems.css
@@ -100,3 +100,60 @@ height: 200px;
     color: white;
     cursor: pointer;
 }
+
+@media(max-width: 1280px) {
+    .cart-items{
+        margin: 60px 50px;
+    }
+    .cart-item-format-main{
+        grid-template-columns: 0.5fr 3fr 0.5fr 0.5fr 0.5fr 0.5fr;
+        gap:20px;
+        padding: 15px 0px;
+        font-size: 15px;
+    }
+    .cart-item-product-icon{
+        height: 60px;
+    }
+    .cart-item-remove-icon{
+        margin: auto;
+    }
+    .cart-items-quantity{
+        width: 40px;
+        height: 30px;
+    }
+    .cart-items-down{
+        margin: 80px 0px;
+        flex-direction: column;
+        gap:80px;
+    }
+    .cart-items-total{
+        margin: 0px;
+    }
+    .cart-items-total button{
+max-width: 200px;
+height: 45px;
+font-size: 13px;
+    }
+    .cart-items-promobox{
+        width:auto;
+        max-width: 500px;
+    }
+    .cart-items-promobox input{
+        width: 100%;
+    }
+    .cart-items-promobox button{
+        width: 120px;
+        margin-left: -125px;
+    }
+}
+
+@media(max-width: 500px){
+    .cart-item-format-main{
+        display: none;
+        grid-template-columns: 0.5fr 3fr 0.5fr;
+        gap:10px;
+    }
+    .cart-items-format{
+        display: grid;
+    }
+}
