--- a/frontend/src/Components/DescriptionBox/descriptionBox.css
+++ b/frontend/src/Components/DescriptionBox/descriptionBox.css
@@ -29,3 +29,17 @@
     padding:48px;
     padding-bottom: 70px;
 }
+
+@media(max-width:1280px){
+    .description-box{
+        margin:60px;
+    }
+}
+@media(max-width:1280px){
+    .description-box{
+        margin:60px 20px;
+    }
+    .descriptionbox-description{
+        font-size: 13px;
+    }
+}
