--- a/frontend/src/Components/Navbar/navbar.css
+++ b/frontend/src/Components/Navbar/navbar.css
@@ -1,6 +1,7 @@
 .navbar {
   display: flex;
   justify-content: space-around;
+  align-items: center;
   padding: 16px;
   box-shadow: 0 1px 3px -2px black;
 }
@@ -13,6 +14,10 @@
   color: #171717;
   font-size: 38px;
   font-weight: 600;
+}
+.nav-dropdown {
+  height: 30px;
+  display: none;
 }
 
 .nav-menu {
@@ -37,7 +42,7 @@
   width: 80px;
   height: 3px;
   border-radius: 10px;
-  background: #E86AFE;
+  background: #e86afe;
 }
 
 .nav-login-cart {
@@ -71,13 +76,103 @@
   margin-left: -55px;
   border-radius: 11px;
   font-size: 14px;
-  background: red;
+  background:#e86afe;
   color: white;
 }
 
 .nav-logo img {
-  width:95px;
+  width: 95px;
 }
-.cart-icon-clicked{
-  background:#E86AFE;
+@media (max-width: 1280px) {
+  .navbar {
+    padding: 12px 50px;
+  }
+  .nav-logo img {
+    width: 40px;
+  }
+  .nav-logo p {
+    font-size: 25px;
+  }
+  .nav-menu {
+    gap: 30px;
+    font-size: 16px;
+  }
+  .nav-login-cart {
+    gap: 30px;
+  }
+  .nav-login-cart button {
+    width: 120px;
+    height: 45px;
+    font-size: 16px;
+  }
+  .nav-cart-count {
+    margin-left: -40px;
+    font-size: 12px;
+  }
+}
+@media (max-width: 1024px) {
+  .navbar {
+    padding: 12px 30px;
+  }
+  .nav-menu {
+    gap: 25px;
+    font-size: 14px;
+  }
+  .nav-login-cart button {
+    width: 80px;
+    height: 35px;
+    font-size: 14px;
+  }
+  .nav-login-cart img {
+    width: 30px;
+  }
+  .nav-cart-count {
+    width: 18px;
+    height: 18px;
+  }
+}
+@media (max-width: 800px) {
+  .navbar {
+    padding: 10px 0px;
+  }
+  .nav-dropdown {
+    display: block;
+    width: 30px;
+    rotate: -90deg;
+    transition: 0.5s;
+  }
+  .nav-menu{
+    display: none;
+    height: 80px;
+    width: 100%;
+    position:absolute;
+    background:white;
+    justify-content: center;
+    top: 50px;
+  }
+  .nav-menu-visible{
+    display: flex;
+  }
+  .nav-dropdown.open{
+    transform: rotate(90deg);
+
+  }
+}
+
+@media(max-width:500px){
+  .navbar{
+    padding: 8px 0px;
+    gap:0;
+  }
+  .nav-logo{
+    transform: scale(0.8);
+  }
+  .nav-menu{
+    height: 70px;
+    top:50px;
+  }
+  .nav-login-cart{
+    transform: scale(0.8);
+
+  }
 }
