--- a/frontend/src/Components/Offers/offers.css
+++ b/frontend/src/Components/Offers/offers.css
@@ -1,6 +1,5 @@
 .offers {
   width: 65%;
-  height: 60vh;
   display: flex;
   margin: auto;
   padding: 70px 140px;
@@ -30,8 +29,7 @@
   width: 282px;
   height: 70px;
   border-radius: 35px;
-  margin-top: 30px;
-  background: #E86AFE;
+  background: #e86afe;
   color: white;
   font-size: 22px;
   font-weight: 500;
@@ -46,4 +44,96 @@
   justify-content: flex-end;
   align-items: center;
   padding-top: 50px;
+}
+
+@media (max-width: 1280px) {
+  .offers {
+    padding: 0px 80px;
+    margin-bottom: 120px;
+    margin-top: 120px;
+  }
+  .offers-left h1 {
+    font-size: 40px;
+  }
+  .offers-left p {
+    font-size: 18px;
+  }
+  .offers-right img {
+    width: 250px;
+  }
+  .offers-left button {
+    width: 220px;
+    height: 50px;
+    font-size: 18px;
+  }
+  .offers-right {
+    padding-top: 30px;
+  }
+}
+@media (max-width: 1024px) {
+  .offers {
+    padding: 30px 60px;
+    margin-bottom: 80px;
+    margin-top: 80px;
+  }
+  .offers-left h1 {
+    font-size: 30px;
+  }
+  .offers-left p {
+    font-size: 16px;
+  }
+  .offers-right img {
+    width: 180px;
+  }
+  .offers-left button {
+    width: 160px;
+    height: 40px;
+    font-size: 16px;
+  }
+  .offers-right {
+    padding-top: 30px;
+    overflow: hidden;
+  }
+}
+@media (max-width: 800px) {
+  .offers {
+    margin-top: 40px;
+    margin-bottom: 40px;
+  }
+  .offers-left h1 {
+    font-size: 22px;
+  }
+  .offers-left p {
+    font-size: 13px;
+  }
+  .offers-right img {
+    width: 130px;
+  }
+  .offers-left button {
+    width: 140px;
+    height: 30px;
+    font-size: 12px;
+  }
+}
+
+@media (max-width: 500px) {
+  .offers {
+    margin-top: 30px;
+    margin-bottom: 30px;
+  }
+  .offers-left h1 {
+    font-size: 16px;
+  }
+  .offers-left p {
+    font-size: 10px;
+  }
+  .offers-right img {
+    width: 110px;
+  }
+  .offers-left button {
+    width: 120px;
+    height: 25px;
+    font-size: 10px;
+    margin-top: 12px;
+  }
 }
